compiler-core/src/erlang/tests/snapshots/rakun_core__erlang__tests__functions__function_called.snap
---
source: compiler-core/src/erlang/tests/functions.rs
assertion_line: 62
expression: "\npub fn main() {\n  main()\n}\n"
---
----- SOURCE CODE

pub fn main() {
  main()
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch]).

-export([main/0]).

-file("/root/project/test/my/mod.rakun", 2).
-spec main() -> any().
main() ->
    main().
