compiler-core/src/erlang/tests/snapshots/rakun_core__erlang__tests__functions__nested_unqualified_imported_function_as_value.snap
---
source: compiler-core/src/erlang/tests/functions.rs
expression: "\nimport some/other.{wibble}\n\npub fn main() {\n  wibble\n}\n"
---
----- SOURCE CODE

import some/other.{wibble}

pub fn main() {
  wibble
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch]).

-export([main/0]).

-file("/root/project/test/my/mod.rakun", 4).
-spec main() -> fun(() -> nil).
main() ->
    fun some@other:wibble/0.
