compiler-core/src/erlang/tests/snapshots/rakun_core__erlang__tests__functions__nested_unqualified_imported_function_called.snap
---
source: compiler-core/src/erlang/tests/functions.rs
assertion_line: 87
expression: "\nimport some/other.{wibble}\n\npub fn main() {\n  wibble()\n}\n"
---
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch]).

-export([main/0]).

-file("/root/project/test/my/mod.rakun", 4).
-spec main() -> nil.
main() ->
    some@other:wibble().
